--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.7.3",
     "hls.js": "^1.5.14",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
