--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^3.1.1",
     "@vidstack/react": "^1.12.1",
     "axios": "^1.7.3",
+    "dashjs": "^4.7.4",
     "hls.js": "^1.5.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
